fixed font size for table on mobile

--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -44,7 +44,7 @@ font-size:85%;
 }
 
 .Charttable-container.d-sm-none.d-xs {
-    font-size:calc(20% + 2vw);
+    font-size: 85%//20% //calc(20% + 1.5vh);
 }
 
 .ReactTable * {
